--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#################################
+# Excluding folder
+.vscode
+s_venv
+Mask_RCNN
+# Datasets don't want to upload
+seg_dataset
+# Any .py files
+project_seg.py
+
+# Exclude the current working .py file
+detect_parking_space.py
